--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -16,6 +16,16 @@ security:
             security: false
         main:
             anonymous: true
+            guard:
+                authenticators:
+                    - App\Security\VeggizAuthenticator
+
+            logout:
+              path: /logout
+
+    role_hierarchy:
+        ROLE_ADMIN:     ROLE_USER
+        ROLE_MODERATOR:  ROLE_USER
 
             # activate different ways to authenticate
 
