--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -22,6 +22,7 @@ security:
 
             logout:
               path: /logout
+              target: /home
 
     role_hierarchy:
         ROLE_ADMIN:     ROLE_USER
