--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -10,6 +10,7 @@ doctrine:
         # configure these for your database server
         driver: 'pdo_mysql'
         server_version: '5.7'
+        unix_socket: /Applications/MAMP/tmp/mysql/mysql.sock
         charset: utf8mb4
         default_table_options:
             charset: utf8mb4
