--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,3 +3,17 @@
 #    controller: App\Controller\DefaultController::index
 logout_route:
     path: /logout
+
+abricot:
+  path:         /abricot
+  controller:   Symfony\Bundle\FrameworkBundle\Controller\TemplateController
+  defaults:
+    template: static/abricot.html.twig
+  methods: GET
+
+eric:
+  path:         /eric
+  controller:   Symfony\Bundle\FrameworkBundle\Controller\TemplateController
+  defaults:
+    template: static/eric.html.twig
+  methods: GET
