--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -22,7 +22,7 @@ security:
 
             logout:
               path: /logout
-              target: /home
+              target: /
 
     role_hierarchy:
         ROLE_ADMIN:     ROLE_USER
